Redesigned structure Fixed incorrect display on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,43 +9,57 @@
 	margin: 0 auto;
 }
 
-#gallery {
-	padding: 50px 0;}
-#gallery .gallery__items {
-	width: 100%;
-	height: 400px;
+.gallery__items {
 	display: flex;
-	justify-content: space-between;
-	align-items: center; }
-#gallery .gallery__items .gallery__section {
+	height: 400px;
+}
+
+.gallery__section {
 	width: 50%;
-	height: 100%; }
-#gallery .gallery__items .gallery__section .gallery__item {
-	perspective: 1000px; }
-#gallery .gallery__items .gallery__section .gallery__item .flipper {
+	height: 100%;
+}
+
+.gallery__left {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.gallery__item {
+	perspective: 1000px;
+}
+
+.flipper {
+	transform-style: preserve-3d;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	transition: .6s;
-	transform-style: preserve-3d;
-	position: relative; }
-#gallery .gallery__items .gallery__section .gallery__item img {
-	width: 100%; }
-#gallery .gallery__items .gallery__section .gallery__item img.card__front, #gallery .gallery__items .gallery__section .gallery__item img.card__back {
+}
+
+.gallery__item-card {
 	position: absolute;
-	top: 0;
-	left: 0; }
-#gallery .gallery__items .gallery__section .gallery__item img.card__front {
-	z-index: 2;
-	transform: rotateY(0deg); }
-#gallery .gallery__items .gallery__section .gallery__item img.card__back {
-	transform: rotateY(180deg); }
-#gallery .gallery__items .gallery__left {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between; }
-#gallery .gallery__items .gallery__left .gallery__item {
-	width: 50%;
-	height: 50%; }
-#gallery .gallery__items .gallery__right .gallery__item {
 	width: 100%;
-	height: 100%; }
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-size: cover;
+	background-position: center center;
+}
+
+.card__front {
+	z-index: 2;
+	transform: rotateY(0);
+}
+.card__back {
+	transform: rotateY(180deg);
+}
+
+.gallery__left .gallery__item {
+	width: 50%;
+	height: 50%;
+}
+
+.gallery__right .gallery__item {
+	width: 100%;
+	height: 100%;
+}
